till social icons

--- a/src/components/feedback/feedbacksection.css
+++ b/src/components/feedback/feedbacksection.css
@@ -488,220 +488,7 @@
 
 }  */
 
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-  .feedback-main {
-    width: 100%;
-    background-color: #f3e8ea;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    gap: 55px;
-    padding-bottom: 5%;
-  }
 
-  .feeback-headers {
-    width: 90%;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    margin-top: 3%;
-  }
-
-  .primary-heading-and-button,
-  .second-main {
-    width: 43%;
-  }
-
-  .primary-heading {
-    width: 75%;
-    color: #111111;
-  }
-
-  .feedback-cards {
-    height: 70%;
-    width: 90%;
-    background-color: red;
-    gap: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-  }
-
-  .feeback-headers {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-  }
-  .card-1 {
-    width: 43%;
-    background-color: #ffffff;
-    border-radius: 5px;
-    margin-right: 20px !important;
-  }
-
-  .feedback-divider {
-    width: 95%;
-    margin-left: 2.5%;
-    border-bottom: 2px dashed #575757;
-  }
-
-  .icon-img {
-    margin-right: -45px;
-    padding: 20px 15px 0px 15px;
-  }
-
-  .arrow-button-feedback {
-    padding: 20px 0;
-  }
-
-  .next-button,
-  .pri-button {
-    padding: 10px;
-    margin: 10px;
-    border-radius: 50%;
-    background-color: #841d2e;
-    color: white;
-    font-size: 20px;
-    width: 40px;
-    height: 40px;
-    object-fit: contain;
-    border: none;
-  }
-
-  .next-button {
-    position: absolute;
-    top: -15vh;
-  }
-
-  .pri-button {
-    position: absolute;
-    bottom: 66vh;
-    left: 80px;
-  }
-
-  .arrow-button-feedback-mobile {
-    display: none;
-  }
-
-  .carosel-inner {
-    display: grid;
-    height: 100% !important;
-    width: 80vw !important;
-    gap: 30px !important;
-  }
-
-  .student-images {
-    display: flex;
-  }
-  .feedback-main {
-    width: 100%;
-    background-color: #f3e8ea;
-    display: flex;
-    flex-direction: row;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    gap: 55px;
-    padding-bottom: 5%;
-  }
-
-  .feeback-headers {
-    width: 90%;
-    display: flex;
-    flex-direction: row;
-
-    align-items: center;
-    justify-content: space-evenly;
-    margin-top: 3%;
-  }
-
-  .primary-heading-and-button,
-  .second-main {
-    width: 43%;
-  }
-
-  .primary-heading {
-    width: 75%;
-    color: #111111;
-  }
-
-  .feedback-cards {
-    height: 70%;
-    width: 90%;
-  }
-
-  .feeback-headers {
-    flex-direction: row;
-
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-  }
-
-  .feedback-cards {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
-  }
-
-  .card-1 {
-    width: 43%;
-    background-color: #ffffff;
-    border-radius: 5px;
-  }
-
-  /* .secondary-paragraph {
-    padding: 20px;
-  } */
-
-  .feedback-divider {
-    width: 95%;
-    margin-left: 2.5%;
-    border-bottom: 2px dashed #575757;
-  }
-
-  .icon-img {
-    margin-right: -45px;
-    padding: 20px 15px 0px 15px;
-  }
-
-  .arrow-button-feedback {
-    display: flex;
-    padding: 20px 0;
-  }
-
-  .next-button {
-    padding: 10px;
-    margin: 10px;
-    border-radius: 50%;
-    background-color: #841d2e;
-    color: white;
-    font-size: 20px;
-    width: 40px;
-    height: 40px;
-    object-fit: contain;
-    border: none;
-  }
-
-  .arrow-button-feedback-mobile {
-    display: none;
-  }
-
-  .carosel-inner {
-    display: grid;
-    height: 100% !important;
-    width: 90vw !important;
-    gap: 30px;
-    background-color: rgb(50, 50, 82);
-  }
-
-  .student-images {
-    display: flex;
-  }
-}
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
@@ -1040,5 +827,208 @@
   }
   .feedback-cards .slick-slider {
     width: 100% !important;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .feedback-main {
+    width: 100%;
+    background-color: #f3e8ea;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 55px;
+    padding-bottom: 5%;
+  }
+
+  .feeback-headers {
+    width: 90%;
+    margin-top: 3%;
+  }
+
+  .primary-heading-and-button,
+  .second-main {
+    width: 43%;
+  }
+
+  .primary-heading {
+    width: 75%;
+    color: #111111;
+  }
+
+  .feedback-cards {
+    height: 70%;
+    width: 90%;
+    background-color: red;
+    gap: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .card-1 {
+    width: 43%;
+    background-color: #ffffff;
+    border-radius: 5px;
+    margin-right: 20px !important;
+  }
+
+  .feedback-divider {
+    width: 95%;
+    margin-left: 2.5%;
+    border-bottom: 2px dashed #575757;
+  }
+
+  .icon-img {
+    margin-right: -45px;
+    padding: 20px 15px 0px 15px;
+  }
+
+  .arrow-button-feedback {
+    padding: 20px 0;
+  }
+
+  .next-button,
+  .pri-button {
+    padding: 10px;
+    margin: 10px;
+    border-radius: 50%;
+    background-color: #841d2e;
+    color: white;
+    font-size: 20px;
+    width: 40px;
+    height: 40px;
+    object-fit: contain;
+    border: none;
+  }
+
+  .next-button {
+    position: absolute;
+    top: -15.6vh;
+  }
+
+  .pri-button {
+    position: absolute;
+    bottom: 66vh;
+    left: 80px;
+  }
+
+  .arrow-button-feedback-mobile {
+    display: none;
+  }
+
+  .carosel-inner {
+    display: grid;
+    height: 100% !important;
+    width: 80vw !important;
+    gap: 30px !important;
+  }
+
+  .student-images {
+    display: flex;
+  }
+  .feedback-main {
+    width: 100%;
+    background-color: #f3e8ea;
+    display: flex;
+    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 55px;
+    padding-bottom: 5%;
+  }
+
+  .feeback-headers {
+    width: 90%;
+    /* margin-top: 3%; */
+  }
+
+  .primary-heading-and-button,
+  .second-main {
+    width: 43%;
+  }
+
+  .primary-heading {
+    width: 75%;
+    color: #111111;
+  }
+
+  .feedback-cards {
+    height: 70%;
+    width: 90%;
+  }
+
+
+  .feedback-cards {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .card-1 {
+    width: 43%;
+    background-color: #ffffff;
+    border-radius: 5px;
+  }
+
+  /* .secondary-paragraph {
+    padding: 20px;
+  } */
+
+  .feedback-divider {
+    width: 95%;
+    margin-left: 2.5%;
+    border-bottom: 2px dashed #575757;
+  }
+
+  .icon-img {
+    margin-right: -45px;
+    padding: 20px 15px 0px 15px;
+  }
+
+  .arrow-button-feedback {
+    display: flex;
+    padding: 20px 0;
+  }
+
+  .next-button {
+    padding: 10px;
+    margin: 10px;
+    border-radius: 50%;
+    background-color: #841d2e;
+    color: white;
+    font-size: 20px;
+    width: 40px;
+    height: 40px;
+    object-fit: contain;
+    border: none;
+  }
+
+  .arrow-button-feedback-mobile {
+    display: none;
+  }
+
+  .carosel-inner {
+    display: grid;
+    height: 100% !important;
+    width: 90vw !important;
+    gap: 30px;
+    background-color: rgb(50, 50, 82);
+  }
+
+  .student-images {
+    display: flex;
+  }
+  
+  .feeback-headers {
+    flex-direction: row;
+
+    display: flex;
+        align-items: flex-start;
+    justify-content: space-evenly;
   }
 }
