--- a/src/components/staticHome/statichome.css
+++ b/src/components/staticHome/statichome.css
@@ -331,7 +331,7 @@
     padding: 20px 20px;
     display: flex;
     gap: 40px;
-    align-items: center;
+    align-items: baseline;
     flex-direction: row;
     justify-content: center;
   }
@@ -494,7 +494,7 @@
     display: flex;
     gap: 40px;
 
-    align-items: center;
+    align-items: baseline;
     flex-direction: row;
     justify-content: center;
   }
@@ -658,7 +658,7 @@
     display: flex;
     gap: 40px;
 
-    align-items: center;
+    align-items: baseline;
     flex-direction: row;
     justify-content: center;
   }
