--- a/src/components/coursestrutureSection/coursestrutureSection.css
+++ b/src/components/coursestrutureSection/coursestrutureSection.css
@@ -395,7 +395,7 @@
         margin: 0;
         text-align: center;
         font-weight: 600;
-        font-size: var(--);
+        font-size: 20px;
         background-color: #f3e8ea !important;
 
     }
